# s8_ip

./: CMakeLists.txt  README.md  package.xml
src/: colorParameters.txt  image_converter.cpp  object_tracker.cpp
