<?xml version="1.0"?>
<package>
  <name>s8_ip</name>
  <version>0.0.0</version>
  <description>Robotics image processing package</description>
  <maintainer email="unnar@kth.se">unnar</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
</package>